# plugin-sdk

./: CMakeLists.txt  conanfile.py
plugin_sa/: CMakeLists.txt
plugin_sa/game_sa/: CVehicleRecording.cpp  CVehicleRecording.h  ССonstants.h
plugin_sa/game_sa/rw/: rwplcore.h
